rgbds-0.6.1/test/asm/macro-syntax.err
warning: macro-syntax.asm(2): [-Wobsolete]
    `old: MACRO` is deprecated; use `MACRO old`
error: macro-syntax.asm(13):
    syntax error, unexpected identifier, expecting newline
error: macro-syntax.asm(15):
    syntax error, unexpected ENDM
error: Assembly aborted (2 errors)!
